--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "body-parser": "~1.15.2",
-    "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
-    "morgan": "~1.7.0"
+    "morgan": "~1.7.0",
+    "mongoose": "~4.2.5",
+    "chai": "~3.5.0",
+    "mocha": "~3.1.2",
+    "supertest": "2.0.1"
   }
 }
