--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
+    "chai": "~3.5.0",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
-    "morgan": "~1.7.0",
-    "mongoose": "~4.2.5",
-    "chai": "~3.5.0",
     "mocha": "~3.1.2",
+    "mongoose": "~4.2.5",
+    "morgan": "~1.7.0",
+    "request": "^2.79.0",
     "supertest": "2.0.1"
   }
 }
