--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register api/**"
+    "test": "./node_modules/.bin/mocha api/**"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
