--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "~1.15.2",
     "chai": "~3.5.0",
+    "cors": "^2.8.1",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
